--- a/presentacion.html
+++ b/presentacion.html
@@ -17,8 +17,13 @@
 		<h3 class="efecto">
 			MUNDO
 		</h3>
+		<h2>
+			QUE TAL
+		</h2>
+
 	<fieldset>
 	<p> Bienvenido a la web más divertida del mundo </p>
 	</fieldset>
+
 	</body>
 </html>
